--- a/demo.html
+++ b/demo.html
@@ -65,7 +65,6 @@
             </div>
             <span class="timeStart timer">00:00</span>
         </div>
-
     </div>
     <button class="btn">add</button>
     <script>
@@ -93,6 +92,12 @@
                 document.removeEventListener('mousemove', move)
             })
         })
+        var ax = {
+            Object: '233',
+            a: "522"
+        }
+        console.log(ax.Object);
+        console.log(ax['Object']);
     </script>
 </body>
 
