--- a/demo.html
+++ b/demo.html
@@ -91,13 +91,15 @@
             document.addEventListener('mouseup', function() {
                 document.removeEventListener('mousemove', move)
             })
-        })
-        var ax = {
-            Object: '233',
-            a: "522"
-        }
-        console.log(ax.Object);
-        console.log(ax['Object']);
+        });
+        // var ax = {
+        //     Object: '233',
+        //     a: "522"
+        // }
+        // console.log(ax.Object);
+        // console.log(ax['Object']);
+        var a = new Object('xxx')
+        console.log(a.__proto__.__proto__);
     </script>
 </body>
 
