--- a/面试3g.html
+++ b/面试3g.html
@@ -11,6 +11,7 @@
             height: 200px;
             background: #000;
             color: #fff;
+            margin: 0 auto;
         }
         
         .title {
@@ -55,7 +56,7 @@
 <body>
     <div class="container">
         <div class="title">
-            <h3>音乐播放器</h3>
+            <p>音乐播放器</p>
         </div>
         <div class="box">
             <span class="timeStart">00:00</span>
