--- a/面试指南/obj.html
+++ b/面试指南/obj.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<div>33</div>
+<h1>522333</h1>
 
 <body>
     <script>
