--- a/demo.html
+++ b/demo.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
         .container {
@@ -68,29 +68,29 @@
     </div>
     <button class="btn">add</button>
     <script>
-        var btn = document.querySelector('.btn')
-        var time = document.querySelector('.timer')
+        var btn = document.querySelector(".btn");
+        var time = document.querySelector(".timer");
         var wrap = document.querySelector(".wrap");
-        var pross = document.querySelector(".pross")
-        btn.addEventListener('click', function() {
-            time.innerHTML = '00:01'
-        })
-        wrap.addEventListener('mousedown', function(e) {
+        var pross = document.querySelector(".pross");
+        btn.addEventListener("click", function() {
+            time.innerHTML = "00:01";
+        });
+        wrap.addEventListener("mousedown", function(e) {
             var x = e.pageX - wrap.offsetLeft;
 
             function move(e) {
-                var offx = e.pageX - x
+                var offx = e.pageX - x;
                 if (offx > 433) {
                     offx = 433;
                 } else if (offx < 51) {
-                    offx = 51
+                    offx = 51;
                 }
-                wrap.style.left = offx + 'px'
+                wrap.style.left = offx + "px";
             }
-            document.addEventListener('mousemove', move);
-            document.addEventListener('mouseup', function() {
-                document.removeEventListener('mousemove', move)
-            })
+            document.addEventListener("mousemove", move);
+            document.addEventListener("mouseup", function() {
+                document.removeEventListener("mousemove", move);
+            });
         });
         // var ax = {
         //     Object: '233',
@@ -98,7 +98,7 @@
         // }
         // console.log(ax.Object);
         // console.log(ax['Object']);
-        var a = new Object('xxx')
+        var a = new Object("xxx");
         console.log(a.__proto__.__proto__);
     </script>
 </body>
