--- a/vue面试/nexttick.html
+++ b/vue面试/nexttick.html
@@ -14,7 +14,7 @@
     </div>
     <script src="./vue.js"></script>
     <script>
-        new Vue({
+        var vm = new Vue({
             el: "#app",
             data: {
                 number: 0
