--- a/table.html
+++ b/table.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         main {
-              display: table;
+            display: table;
             width: 100%;
             border-spacing: 30px 30px;
             height: 300px;
@@ -37,6 +37,8 @@
         <div></div>
     </main>
     <div class="pie2"></div>
+
+    <div contenteditable="true">Lorem ipsum dolor sit amet consectetur, adipisicing elit. A, placeat? Sapiente optio excepturi itaque voluptate temporibus, maxime molestias blanditiis minus quasi consequatur ratione, soluta porro earum laudantium. Itaque, voluptate quas.</div>
     <script>
         // console.dir(Object.getPrototypeOf({}));
         var a = Object.create(null)
