--- a/table.html
+++ b/table.html
@@ -51,6 +51,9 @@
             // console.log(Object.getOwnPropertyDescriptor(c, 'a'));
         console.log(typeof(function() {}))
         console.dir(Object.keys(function() {}).__proto__);
+        let x = 'lisi';
+        var x = 122
+        console.log(x);
     </script>
 </body>
 
