--- a/table.html
+++ b/table.html
@@ -38,7 +38,9 @@
     </main>
     <div class="pie2"></div>
 
-    <div contenteditable="true">Lorem ipsum dolor sit amet consectetur, adipisicing elit. A, placeat? Sapiente optio excepturi itaque voluptate temporibus, maxime molestias blanditiis minus quasi consequatur ratione, soluta porro earum laudantium. Itaque, voluptate quas.</div>
+    <div contenteditable="true">Lorem ipsum dolor sit amet consectetur, adipisicing elit. A, placeat? Sapiente optio excepturi itaque voluptate temporibus, maxime molestias blanditiis minus quasi consequatur ratione, soluta porro earum laudantium. Itaque, voluptate quas.
+
+    </div>
     <script>
         // console.dir(Object.getPrototypeOf({}));
         var a = Object.create(null)
@@ -46,9 +48,9 @@
         var b = {}
         console.dir(b)
         let c = {
-                a: 'sss'
-            }
-            // console.log(Object.getOwnPropertyDescriptor(c, 'a'));
+            a: 'sss'
+        };
+        // console.log(Object.getOwnPropertyDescriptor(c, 'a'));
         console.log(typeof(function() {}))
         console.dir(Object.keys(function() {}).__proto__);
         let x = 'lisi';
