--- a/手写代码系列/grid.html
+++ b/手写代码系列/grid.html
@@ -14,8 +14,9 @@
             grid-template-rows: repeat(3, 100px);
             grid-template-columns: repeat(3, 100px);
             border: 2px solid #ccc;
+            margin: 0 auto;
         }
-
+        
         div {
             width: 100px;
             height: 100px;
