--- a/css相关/移动端.html
+++ b/css相关/移动端.html
@@ -3,15 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <title>Document</title>
     <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
     <div class="header"></div>
-    <script>
+    <script async>
         var html = document.documentElement;
+        console.log(html);
+
         var winth = html.clientWidth;
         var s = winth / 10;
         html.style.fontSize = s + 'px';
