please enter the commit message for your changes. Lines starting
qa

aq

!wa

--- a/业余学习/test.html
+++ b/业余学习/test.html
@@ -16,8 +16,7 @@
             const r = search.match(reg) || [];
             return r[2];
         }
-        let a = getQueryString();
-        console.log(a);
+        let a = getQueryString()
     </script>
 </body>
 
