--- a/乱七八糟/函数.html
+++ b/乱七八糟/函数.html
@@ -16,19 +16,29 @@
         // }
         // fn();
         // console.log(this, this.a, a); //window 1 1
-        var p = {
-            a: 1,
-            m: function() {
-                console.log(111);
-                console.log(this, '=== ');
-            },
-            n: function() {
-                this.a = 2;
-            }
+        // var p = {
+        //     a: 1,
+        //     m: function() {
+        //         console.log(111);
+        //         console.log(this, '=== ');
+        //     },
+        //     n: function() {
+        //         this.a = 2;
+        //     }
+        // }
+        // console.log(p.m()); //1
+        // o.n();
+        // console.log(o.m().a); //2
+        function setName(obj) {
+            obj.name = 'test';
+            console.log(person.name); //'test'
+            //函数内部重写引用类型的形参，这个obj变量是一个局部对象。函数执行完毕，立马销毁。所以person.name还是全局对象person的属性值
+            obj = new Object();
+            obj.name = 'white';
+            console.log(person.name); //'test'
         }
-        console.log(p.m()); //1
-        o.n();
-        console.log(o.m().a); //2
+        var person = new Object();
+        setName(person);
     </script>
 </body>
 
