--- a/css相关/css画心.html
+++ b/css相关/css画心.html
@@ -24,7 +24,7 @@
             width: 200px;
             height: 200px;
             background-color: red;
-            transform: rotate(45deg) scale(0.5);
+            transform: rotate(45deg);
             animation-name: heart;
             animation-duration: 2s;
             animation-iteration-count: infinite;
