--- a/vue面试/mvvm.html
+++ b/vue面试/mvvm.html
@@ -2,28 +2,26 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 </head>
 
 <body>
-    <input id="input" type="text" />
+    <input id=input " type="text " />
     <script>
-        const data = {};
-        const input = document.getElementById('input');
-        Object.defineProperty(data, 'text', {
-            set(value) {
-                input.value = value;
-                this.value = value;
-                console.log(this.value);
-
-            }
-        });
-        input.onChange = function(e) {
-            data.text = e.target.value;
-        }
+      const data = {};
+      const input = document.getElementById("input ");
+      Object.defineProperty(data, "text ", {
+        set(value) {
+          input.value = value;
+          this.value = value;
+          console.log(this.value);
+        },
+      });
+      input.onChange = function (e) {
+        data.text = e.target.value;
+      };
     </script>
-</body>
-
+  </body>
 </html>
