--- a/vue面试/简单实现mvvm.html
+++ b/vue面试/简单实现mvvm.html
@@ -1,37 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-    <input type="text" class='int'>
-    <div class='box'></div>
+  <body>
+    <input type="text" class="int" />
+    <div class="box"></div>
     <script>
-        var data = {
+      var data = {
+        text: "hello world",
+      };
 
-        }
+      var input = document.querySelector(".int");
+      var box = document.querySelector(".box");
+      box.innerHTML = data.text;
+      input.onchange = function (e) {
+        data.text = e.target.value;
+        console.log(e.target.value);
+      };
 
-        var input = document.querySelector('.int')
-        var box = document.querySelector('.box')
-        box.innerHTML = data.text;
-
-        Object.defineProperty(data, 'text', {
-            set(val) {
-                input.value = val
-                data.text = val
-            },
-            get() {
-
-            }
-        })
-        input.onChange = function(e) {
-            data.text = e.target.value
-        }
+      Object.defineProperty(data, "text", {
+        set(val) {
+          input.value = val;
+          data.text = val;
+          console.log("233改变了");
+        },
+        get() {},
+      });
     </script>
-</body>
-
+  </body>
 </html>
