--- a/乱七八糟/menu.html
+++ b/乱七八糟/menu.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+    <script src="https://gist.github.com/pengtaoa/d7affa75a64928fbf6d49de378aebb22.js"></script>
     <script>
         var menu_list = [{
             id: '1',
