--- a/乱七八糟/menu.html
+++ b/乱七八糟/menu.html
@@ -92,7 +92,7 @@
 
             return tree
         }
-        console.dir(menu(menu_list));
+        console.dir(menu(menu_list))
     </script>
 </body>
 
