--- a/乱七八糟/按钮.html
+++ b/乱七八糟/按钮.html
@@ -50,6 +50,17 @@
         .buy-book-button:hover:before {
             bottom: 100%
         }
+        
+        .demo {
+            width: 500px;
+            height: 200px;
+            background: #7F7FD5;
+            /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
+            /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
+            /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        }
     </style>
 </head>
 
@@ -59,6 +70,7 @@
             <span class="buy-book-button__extra-text">购买
         </span>EPUB/PDF</a>
     </div>
+    <div class="demo">34</div>
 </body>
 
 </html>
