--- a/css相关/grid.html
+++ b/css相关/grid.html
@@ -13,6 +13,7 @@
             display: grid;
             grid-template-rows: repeat(3, 100px);
             grid-template-columns: repeat(3, 100px);
+            gap: 5px;
             border: 2px solid #ccc;
             margin: 0 auto;
         }
