--- a/css相关/并排等宽.html
+++ b/css相关/并排等宽.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .container {
+        /* .container {
             width: 100%;
-        }
+        } */
         
         .box {
             width: calc(calc(100% / 3) - 20px);
