--- a/牛客js能力评测/改错.html
+++ b/牛客js能力评测/改错.html
@@ -1,3 +1,31 @@
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <div onclick="console.log('first div')">
+        <div onclick="console.log('second div')">
+            <button id="btn">
+            Click!
+          </button>
+        </div>
+    </div>
+    <script>
+        let btn = document.querySelector('#btn');
+        btn.onclick = function(e) {
+            console.log(e.target);
+        }
+    </script>
+</body>
+
+</html>
+
 <script>
     function functions(flag) {
         if (flag) {
@@ -48,4 +76,18 @@
     C.prototype.bop = 'bip';
 
     console.log(iterate(new C()));
+</script>
+<script type="text/javascript">
+    const a = {}
+    const b = {
+        key: 'b'
+    }
+    const c = {
+        key: 'c'
+    }
+
+    a[b] = 123
+    a[c] = 456
+    console.log(a)
+    console.log(a[b])
 </script>
