--- a/手写代码系列/requestAnimation.html
+++ b/手写代码系列/requestAnimation.html
@@ -45,6 +45,8 @@
 
         }
         setTimeout(() => {
+            console.log(id);
+
             cancelAnimationFrame(id)
         }, 2000)
     </script>
