--- a/css相关/css画心.html
+++ b/css相关/css画心.html
@@ -25,9 +25,9 @@
             height: 200px;
             background-color: red;
             transform: rotate(45deg);
-            animation-name: heart;
+            /* animation-name: heart;
             animation-duration: 2s;
-            animation-iteration-count: infinite;
+            animation-iteration-count: infinite; */
         }
         
         @keyframes heart {
