--- a/css相关/九宫格.html
+++ b/css相关/九宫格.html
@@ -10,7 +10,7 @@
             width: 250px;
             /* height: 900px; */
             margin: 0 auto;
-            background-color: #ccc;
+            /* background-color: #ccc; */
             display: flex;
             /* flex-direction: column;
             align-items: center;
