--- a/乱七八糟/按钮.html
+++ b/乱七八糟/按钮.html
@@ -44,7 +44,8 @@
         }
         
         .buy-book-button:hover {
-            border: 1px solid #fff
+            border: 1px solid #fff;
+            bottom: 100%;
         }
         
         .buy-book-button:hover:before {
