--- a/其他/tes56.html
+++ b/其他/tes56.html
@@ -11,6 +11,7 @@
             width: 160px;
             height: 160px;
             display: inline-block;
+            margin-left: -6px;
             border: 1px solid #ccc;
             background-color: aquamarine;
             vertical-align: bottom;
