--- a/css相关/grid.html
+++ b/css相关/grid.html
@@ -8,12 +8,12 @@
     <title>Document</title>
     <style>
         article {
-            width: 300px;
+            width: 310px;
             height: 300px;
             display: grid;
-            grid-template-rows: repeat(3, 100px);
-            grid-template-columns: repeat(3, 100px);
-            gap: 5px;
+            grid-template-rows: repeat(3, 1fr);
+            grid-template-columns: repeat(3, 1fr);
+            /* gap: 5px; */
             border: 2px solid #ccc;
             margin: 0 auto;
         }
