--- a/css相关/定位.html
+++ b/css相关/定位.html
@@ -8,20 +8,23 @@
         .outer {
             width: 200px;
             height: 200px;
-            background: red;
-            border: 100px solid black;
             padding: 100px;
-            position: absolute;
-            margin: 20px;
+            /* margin: 20px; */
+            /* border: 100px solid black; */
+            background: red;
+            transform: translateX(100px);
+            /* perspective: 1000; */
+            margin: 100px;
         }
         
         .inner {
+            transition: all 0.3s ease;
             width: 50px;
             height: 50px;
             background: green;
             position: absolute;
             left: 20px;
-            top: 20px;
+            top: 50px;
         }
     </style>
 </head>
