--- a/梦旅开发团/debonce.html
+++ b/梦旅开发团/debonce.html
@@ -27,6 +27,26 @@
         }
         const Odebounce = debounce(success, 2000)
         btn.addEventListener('click', Odebounce);
+        const debounce = (fn, delay) => {
+            let timer = null;
+            return (...args) => {
+                clearTimeout(timer)
+                timer = setTimeout(() => {
+                    fn.apply(this, args)
+                }, delay);
+            }
+        }
+        const troottle = (fn, delay) => {
+            let flag = true
+            return (...args) => {
+                if (!flag) return
+                flag = false
+                setTimeout(() => {
+                    fn.apply(this, args)
+                    flag = true
+                })
+            }
+        }
     </script>
 </body>
 
