--- a/css相关/并排等宽.html
+++ b/css相关/并排等宽.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        /* .container {
-            width: 100%;
-        } */
-        
-        .box {
-            width: calc(calc(100% / 3) - 20px);
-            display: inline-block;
-            background-color: #ccc;
-            border: 1px solid #fff;
-        }
+      .container {
+        width: 100%;
+      }
+      .box {
+        width: calc(calc(100% / 3) - 20px);
+        display: inline-block;
+        background-color: #ccc;
+        border: 1px solid #fff;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
+      <div class="box">1</div>
+      <div class="box">2</div>
+      <div class="box">3</div>
     </div>
-</body>
-
+  </body>
 </html>
