--- a/test/定位.html
+++ b/test/定位.html
@@ -33,6 +33,7 @@
         background-color: black;
         position: absolute;
         left: 20px;
+        transform: translateX(100px);
       }
     </style>
   </head>
