--- a/vue面试/如何监听数组.html
+++ b/vue面试/如何监听数组.html
@@ -44,5 +44,65 @@
       // 索引和长度的变化是监控不到的
       let arrayMethods = Object.create(Array.prototype);
     </script>
+    <script>
+      // proxy版本
+      const input = document.getElementById("input");
+      const p = document.getElementById("p");
+      const obj = {};
+
+      const newObj = new Proxy(obj, {
+        get: function (target, key, receiver) {
+          console.log(`getting ${key}!`);
+          return Reflect.get(target, key, receiver);
+        },
+        set: function (target, key, value, receiver) {
+          console.log(target, key, value, receiver);
+          if (key === "text") {
+            input.value = value;
+            p.innerHTML = value;
+          }
+          return Reflect.set(target, key, value, receiver);
+        },
+      });
+
+      input.addEventListener("keyup", function (e) {
+        newObj.text = e.target.value;
+      });
+    </script>
+    <script>
+      const arrayProto = Array.prototype;
+      export const arrayMethods = Object.create(arrayProto);
+      const methodsToPatch = [
+        "push",
+        "pop",
+        "shift",
+        "unshift",
+        "splice",
+        "sort",
+        "reverse",
+      ];
+      methodsToPatch.forEach(function (method) {
+        // 重写原型方法  const original = arrayProto[method]
+        // 调用原数组的方法
+        def(arrayMethods, method, function mutator(...args) {
+          const result = original.apply(this, args);
+          const ob = this.__ob__;
+          let inserted;
+          switch (method) {
+            case "push":
+            case "unshift":
+              inserted = args;
+              break;
+            case "splice":
+              inserted = args.slice(2);
+              break;
+          }
+          if (inserted) ob.observeArray(inserted); // notify change
+          ob.dep.notify(); // 当调用数组方法后，手动通知视图更新
+          return result;
+        });
+      });
+      this.observeArray(value); // 进行深度监控
+    </script>
   </body>
 </html>
