--- a/vue面试/响应式原理实现.html
+++ b/vue面试/响应式原理实现.html
@@ -105,4 +105,28 @@
   watcher(() => {
     console.log("233");
   });
+  let state = {
+    a: 1,
+  };
+
+  function defineReactive(obj) {
+    Object.keys(obj).forEach((key) => {
+      let value = obj[key];
+      let dep = [];
+      Object.defineProperty(obj, key, {
+        get: function () {
+          if (active) {
+            dep.push(active);
+          }
+          return value;
+        },
+        set: function (newValue) {
+          if (value !== newValue) {
+            dep.forEach((watcher) => watcher());
+            value = newValue;
+          }
+        },
+      });
+    });
+  }
 </script>
